# mplDTs

./: .buildinfo  .gitignore  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/mpldts/geometry/: _geometry.html  drift_cell.html  dt_frame.html  layer.html  station.html  super_layer.html  transforms.html
_modules/mpldts/patches/: dt_patch.html  dt_patch_base.html  dt_station_patch.html
_sources/: index.rst.txt
_sources/src/geometry/: drift_cell.rst.txt  layer.rst.txt  main.rst.txt  station.rst.txt  (+1 more)
_static/txts/: out_super_layer.txt
docs/: conf.py  index.rst
mpldts/geometry/: __init__.py  _geometry.py  am_dt_segment.py  am_dt_segments.py  drift_cell.py  dt_frame.py  dt_segment.py  dt_segments.py  layer.py  segment.py  segments.py  station.py  super_layer.py  transforms.py
mpldts/patches/: __init__.py  am_segments_patch.py  dt_patch.py  dt_patch_base.py  dt_station_patch.py  segments_patch.py
src/geometry/: drift_cell.html  layer.html  main.html  station.html  super_layer.html
src/patches/: dt_patch.html  dt_patch_base.html  dt_station_patch.html  main.html
test/: cms_dt_global_one.py  cms_dt_local_c.py  cms_dt_local_inversion.py  cms_dt_local_wb.py  cms_dt_segments.py  cms_dts_eta_zoomed.py  cms_dts_etas.py  cms_dts_phi_zoomed.py  cms_dts_segments.py  data.txt  dt_patch_test.py  inpect_dts_geometry.py  test_pytransform.py  test_pytransform_eta.py  transform_validation.py
(+10 files in other folders)
